5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1646_2449.log
== TEST (2019-04-22 19:36:04) 
-- CODE:
a = int(input("Valor de a: "))
b = int(input("Valor de b: "))
c = int(input("Valor de c: "))
d = int(input("Valor de d: "))
e = int(input("Valor de e: "))
f = int(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:37:29) 
-- CODE:
a = int(input("Valor de a: "))
b = int(input("Valor de b: "))
c = int(input("Valor de c: "))
d = int(input("Valor de d: "))
e = int(input("Valor de e: "))
f = int(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

print(x)
print(y)
-- EXECUTION TIME:
0.149324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:38:00) 
-- CODE:
a = int(input("Valor de a: "))
b = int(input("Valor de b: "))
c = int(input("Valor de c: "))
d = int(input("Valor de d: "))
e = int(input("Valor de e: "))
f = int(input("Valor de f: "))

x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:38:17) 
-- CODE:
a = int(input("Valor de a: "))
b = int(input("Valor de b: "))
c = int(input("Valor de c: "))
d = int(input("Valor de d: "))
e = int(input("Valor de e: "))
f = int(input("Valor de f: "))

x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)

print(x)
print(y)
-- EXECUTION TIME:
0.209511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:38:59) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = int(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:39:14) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)

print(x)
print(y)
-- EXECUTION TIME:
0.18893
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = int(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:49:51) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if(x == 0, y == 0):
	print(" Nao tem solucao")
else:
x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)
print(x)
print(y)
-- ERROR:
File "XXXX", line 11
    x = int(c*e - b*f)/(a*e - b*d)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:52:54) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if(x != 0, y != 0):
	x = int(c*e - b*f)/(a*e - b*d)
	y = int(a*f - c*d)/(a*e - b*d)
print(x)
print(y)

else:
print("Nao tem solucao")
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:53:30) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if(x != 0, y != 0):
	x = int(c*e - b*f)/(a*e - b*d)
	y = int(a*f - c*d)/(a*e - b*d)
print(x)
print(y)

else:

	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:56:25) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if(x != 0, y != 0):
	x = int(c*e - b*f)/(a*e - b*d)
	y = int(a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	mensagem = "Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x != 0, y != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:59:26) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if(x % y != 0):
	x = int(c*e - b*f)/(a*e - b*d)
	y = int(a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	mensagem = "Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x % y != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:00:00) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if(x != 0):
	x = int(c*e - b*f)/(a*e - b*d)
	y = int(a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)

else:
	mensagem = "Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:02:10) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)

if(x !=0, y!=0):
	
	print(x)
	print(y)

else:
	mensagem = "Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = int(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 20:02:22) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = int(c*e - b*f)/(a*e - b*d)
y = int(a*f - c*d)/(a*e - b*d)

if(x !=0, y!=0):
	
	print(x)
	print(y)

else:
	mensagem = "Nao tem solucao"
	print(mensagem)
-- EXECUTION TIME:
0.202332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = int(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
